# quant_decision_system

./: .coverage  .dockerignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  main.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci-cd.yml  quant-ci.yml  ssh-deploy.yml
argocd/: application.yaml
backtest/: engine.py  execution.py  rules.py  walkforward.py
config/monitoring/alertmanager/: alertmanager.yml
config/monitoring/prometheus/: prometheus.yml
configs/ssh/: config  ssh-rotator.service  ssh-rotator.timer
core/: interfaces.py
data/providers/: ifind_provider.py
execution/: connector.py  gateway.py
infra/docker/: docker-compose.dev.yml
infra/k8s/production/: deployment.yaml  hpa.yaml  kustomization.yaml  network-policy.yaml  service.yaml
infra/security/configmap-hotupdate-api/: configmap_hotupdate_api.py  deployment-rbac-proxy.yaml
infra/security/dirichlet-abn-engine/: dirichlet_abn_service.py  grafana-dirichlet-panel.json
infra/security/dirichlet-ci-converge/: convergence_engine.py
infra/security/envoy-dynamic-whitelist-ctrl/: whitelist_controller.py
infra/security/envoy-metric-bandwidth/: envoy-prometheus-relabel.yaml  (+1 more)
ml/: pipeline.py
monitoring/: metrics.py  model_decay.py
requirements/: base.txt  dev.txt
results/: backtest_report.json
risk/: manager.py
scripts/: backtest_runner.py  git-ssh.sh  ssh_key_rotator.sh
strategies/: base.py  momentum.py
tests/: conftest.py  test_ifind.py  test_momentum.py
utils/: logging_config.py
(+95 files in other folders)
