[metadata]
name = quant_decision_system
version = 1.0.0
description = Quantitative Investment Analysis and Decision System
author = Quant Team
author_email = quant@company.com
license = proprietary
classifiers =
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    pandas>=2.2.0
    numpy>=1.26.0
    lightgbm>=4.3.0
    optuna>=3.6.0
    shap>=0.45.0
    tenacity>=8.2.0
    diskcache>=5.6.0
    pydantic>=2.6.0
    prometheus-client>=0.20.0
    fastapi>=0.110.0
    uvicorn>=0.29.0

[options.extras_require]
dev =
    pytest>=8.1.0
    pytest-cov>=5.0.0
    pytest-xdist>=3.5.0
    ruff>=0.3.0
    mypy>=1.9.0
    bandit>=1.7.0
    pre-commit>=3.6.0

[options.packages.find]
exclude =
    tests*
    docs*
    scripts*

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
ignore_missing_imports = True

[ruff]
line-length = 120
target-version = py311
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # 行长度由 ruff format 管理

[coverage:run]
source = .
omit = 
    .venv/*
    tests/*
    */__pycache__/*
    */*.pyc

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__.:
    raise NotImplementedError
